--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
     "bwip-js": "^4.5.3",
+    "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "firebase": "^11.5.0",
     "html2canvas": "^1.4.1",
