--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+dist_electron
+build
 *.local
 
 # Editor directories and files
@@ -23,3 +25,5 @@ dist-ssr
 *.sln
 *.sw?
 .env
+.env.development
+.env.production
